src/components/cards/sign-in/sign-in.scss
@import '../../_form-elements/text-field/text-field.scss';
@import '../../_form-elements/_buttons/button/button.scss';

.sign-in {
	padding: 40px 30px 32px;

	background: #FFFFFF;
	box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);

	border: 1px solid rgba(0, 0, 0, 0.12);
	border-radius: 4px;
	box-sizing: border-box;

	& h1 {
		margin-bottom: 20px;
	}

	&--details {
		margin-bottom: 10px;

		& input {
			margin-bottom: 10px;
		}
	}

	& button {
		height: 44px;
	}

	&--signup {
		display: flex;
		justify-content: space-between;
		align-items: center;

		margin-top: 30px;
	}
}

