fix(sign-in): wrong width on sign-in button

--- a/src/components/cards/sign-in/sign-in.scss
+++ b/src/components/cards/sign-in/sign-in.scss
@@ -33,5 +33,9 @@
 		align-items: center;
 
 		margin-top: 30px;
+
+		& button {
+			width: 99px;
+		}
 	}
 }
